include/electionguard/manifest.h

/**
 * Enumeration for the type of geopolitical unit
 * see: https://developers.google.com/elections-data/reference/reporting-unit-type
 */
typedef enum eg_reporting_unit_type_e {
    ELECTIONGUARD_REPORTING_UNIT_TYPE_UNKNOWN = 0,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_BALLOT_BATCH = 1,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_BALLOT_STYLE_AREA = 2,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_BOROUGH = 3,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_CITY = 4,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_CITY_COUNCIL = 5,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_COMBINED_PRECINCT = 6,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_CONGRESSIONAL = 7,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_COUNTRY = 8,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_COUNTY = 9,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_COUNTY_COUNCIL = 10,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_DROP_BOX = 11,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_JUDICIAL = 12,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_MUNICIPALITY = 13,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_POLLING_PLACE = 14,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_PRECINCT = 15,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_SCHOOL = 16,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_SPECIAL = 17,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_SPLIT_PRECINCT = 18,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_STATE = 19,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_STATE_HOUSE = 20,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_STATE_SENATE = 21,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_TOWNSHIP = 22,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_UTILITY = 23,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_VILLAGE = 24,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_VOTE_CENTER = 25,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_WARD = 26,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_WATER = 27,
    ELECTIONGUARD_REPORTING_UNIT_TYPE_OTHER = 28
} eg_reporting_unit_type_t;
/**
 * Use this as a type for character strings.
 * See: https://developers.google.com/elections-data/reference/annotated-string
 */
typedef struct eg_annotated_string_s eg_annotated_string_t;
/**
 * The ISO-639 language
 * see: https://en.wikipedia.org/wiki/ISO_639
 * see: https://developers.google.com/civics-data/reference/internationalized-text#language-string
 */
typedef struct eg_language_s eg_language_t;
/**
 * Data entity used to represent multi-national text. Use when text on a ballot contains multi-national text.
 * See: https://developers.google.com/elections-data/reference/internationalized-text
 */
typedef struct eg_internationalized_text_s eg_internationalized_text_t;
EG_API eg_electionguard_status_t eg_internationalized_text_new(
  eg_language_t *in_text[], const uint64_t in_text_size, eg_internationalized_text_t **out_handle);
EG_API eg_electionguard_status_t
eg_internationalized_text_free(eg_internationalized_text_t *handle);
/**
 * Get the Size of the text collection
 */
EG_API uint64_t eg_internationalized_text_get_text_size(eg_internationalized_text_t *handle);
/**
 * Get a text at a specific index.
 * 
 * @param[in] in_index The index of the text
 * @param[out] out_text_ref An opaque pointer to the text.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_internationalized_text_get_text_at_index(
  eg_internationalized_text_t *handle, uint64_t in_index, eg_language_t **out_text_ref);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t
eg_intertnationalized_text_crypto_hash(eg_language_t *handle, eg_element_mod_q_t **out_crypto_hash);
/**
* For defining contact information about objects such as persons, boards of authorities, and organizations.
*
* Contact Information values are not used internally by ElectionGuard when encrypting ballots
* but are included for checking the validity of a supplied manifest.
*
* See: https://developers.google.com/elections-data/reference/contact-information
*/
typedef struct eg_contact_information_s eg_contact_information_t;
EG_API eg_electionguard_status_t eg_contact_information_new(char *in_name,
                                                            eg_contact_information_t **out_handle);
EG_API eg_electionguard_status_t eg_contact_information_new_with_collections(
  char *in_name, char *in_address_line[], const uint64_t in_address_line_size,
  eg_annotated_string_t *in_email_line[], const uint64_t in_email_line_size,
  eg_annotated_string_t *in_phone_line[], const uint64_t in_phone_line_size,
  eg_contact_information_t **out_handle);
EG_API eg_electionguard_status_t eg_contact_information_free(eg_contact_information_t *handle);
/**
 * Get the Size of the address collection
 */
EG_API uint64_t eg_contact_information_get_address_line_size(eg_contact_information_t *handle);
/**
 * Get an address line at a specific index.
 * 
 *  Associates an address with the contact.
 * AddressLine needs to contain the lines that someone would
 * enter into a web mapping service to find the address on a map.
 * That is, the value of the field needs to geocode the contact location.
 * 
 * @param[in] in_index The index of the text
 * @param[out] out_text_ref An opaque pointer to the text.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t eg_contact_information_get_address_line_at_index(
  eg_contact_information_t *handle, uint64_t in_index, char **out_address);
/**
 * Get the Size of the email line collection
 */
EG_API uint64_t eg_contact_information_get_email_line_size(eg_contact_information_t *handle);
/**
 * Get an email line at a specific index.
 * 
 *  Associates an address with the contact.
 * AddressLine needs to contain the lines that someone would
 * enter into a web mapping service to find the address on a map.
 * That is, the value of the field needs to geocode the contact location.
 * 
 * @param[in] in_index The index of the text
 * @param[out] out_text_ref An opaque pointer to the text.  
 *                          The value is a reference and is not owned by the caller
 */
EG_API eg_electionguard_status_t
eg_contact_information_get_email_line_at_index(eg_contact_information_t *handle, uint64_t in_index,
                                               eg_internationalized_text_t **out_address_ref);
/**
 * Get the Size of the phone line collection
 */
EG_API uint64_t eg_contact_information_get_phone_line_size(eg_contact_information_t *handle);
EG_API eg_electionguard_status_t eg_contact_information_get_name(eg_contact_information_t *handle,
                                                                 const char **out_name);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_contact_information_crypto_hash(
  eg_contact_information_t *handle, eg_element_mod_q_t **out_crypto_hash);
/**
* A geopolitical unit describes any physical or
* virtual unit of representation or vote/seat aggregation.
* Use this entity for defining geopolitical units such as
* cities, districts, jurisdictions, or precincts,
* for the purpose of associating contests, offices, vote counts,
* or other information with the geographies.
*
* Geopolitical Units are not used when encrypting ballots but are required by
* ElectionGuard to determine the validity of ballot styles.
*
* See: https://developers.google.com/elections-data/reference/gp-unit
*/
typedef struct eg_geopolitical_unit_s eg_geopolitical_unit_t;
EG_API eg_electionguard_status_t eg_geopolitical_unit_new(
  char *in_object_id, char *in_name, eg_reporting_unit_type_t in_reporting_unit_type,
  eg_geopolitical_unit_t **out_handle);
EG_API eg_electionguard_status_t eg_geopolitical_unit_new_with_contact_info(
  char *in_object_id, char *in_name, eg_reporting_unit_type_t in_reporting_unit_type,
  eg_contact_information_t *in_contact_information, eg_geopolitical_unit_t **out_handle);
EG_API eg_electionguard_status_t eg_geopolitical_unit_free(eg_geopolitical_unit_t *handle);
EG_API eg_electionguard_status_t eg_geopolitical_unit_get_object_id(eg_geopolitical_unit_t *handle,
                                                                    const char **out_object_id);
EG_API eg_electionguard_status_t eg_geopolitical_unit_get_name(eg_geopolitical_unit_t *handle,
                                                               const char **out_name);
EG_API eg_reporting_unit_type_t get_geopolitical_unit_get_type(eg_geopolitical_unit_t *handle);
/**
 * A hash representation of the object. Caller is responsible for lifecycle.
 */
EG_API eg_electionguard_status_t eg_geopolitical_unit_crypto_hash(
  eg_geopolitical_unit_t *handle, eg_element_mod_q_t **out_crypto_hash);
/*
* A BallotStyle works as a key to uniquely specify a set of contests. See also `ContestDescription`.
*
* For ElectionGuard, each contest is associated with a specific geopolitical unit,
* and each ballot style is associated with at least one geopolitical unit.
*
* It is up to the consuming application to determine how to interpreit the relationships
* between these entity types.
*/
typedef struct eg_ballot_style_s eg_ballot_style_t;
EG_API eg_electionguard_status_t eg_ballot_style_new(char *in_object_id,
                                                     char *in_geopolitical_unit_ids[],
                                                     const uint64_t in_geopolitical_unit_ids_size,
                                                     eg_ballot_style_t **out_handle);
EG_API eg_electionguard_status_t eg_ballot_style_new_with_parties(
  char *in_object_id, char *in_geopolitical_unit_ids[],
  const uint64_t in_geopolitical_unit_ids_size, char *in_party_ids[],
  const uint64_t in_party_ids_size, char *in_image_uri, eg_ballot_style_t **out_handle);
EG_API eg_electionguard_status_t eg_ballot_style_free(eg_ballot_style_t *handle);
EG_API eg_electionguard_status_t eg_ballot_style_get_object_id(eg_ballot_style_t *handle,
                                                               const char **out_object_id);
EG_API uint64_t eg_ballot_style_get_geopolitical_unit_ids_size(eg_ballot_style_t *handle);