bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


        // TODO: get the calling conventions correct

        internal static class InternationalizedText
        {
            internal struct InternationalizedTextType { };

            internal class InternationalizedTextHandle
                : ElectionGuardSafeHandle<InternationalizedTextType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = InternationalizedText.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"InternationalizedText Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_internationalized_text_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                // TODO: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] text,
                ulong textSize,
                out InternationalizedTextHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internationalized_text_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(InternationalizedTextType* handle);

            [DllImport(DllName, EntryPoint = "eg_internationalized_text_get_text_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetTextSize(
                InternationalizedTextHandle handle);

            [DllImport(DllName, EntryPoint = "eg_internationalized_text_get_text_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetTextAtIndex(
                InternationalizedTextHandle handle,
                ulong index,
                out Language.LanguageHandle text);

            [DllImport(DllName, EntryPoint = "eg_intertnationalized_text_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                InternationalizedTextHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region ContactInformation

        internal static class ContactInformation
        {
            internal struct ContactInformationType { };

            internal class ContactInformationHandle
                : ElectionGuardSafeHandle<ContactInformationType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ContactInformation.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ContactInformation Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_contact_information_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string name,
                out ContactInformationHandle handle);

            // TODO: add eg_contact_information_new_with_collections

            [DllImport(DllName, EntryPoint = "eg_contact_information_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ContactInformationType* handle);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_address_line_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetAddressLineSize(
                ContactInformationHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_address_line_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetAddressLineAtIndex(
                ContactInformationHandle handle,
                ulong index,
                out IntPtr address);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_email_line_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetEmailLineSize(
                ContactInformationHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_email_line_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetEmailLineAtIndex(
                ContactInformationHandle handle,
                ulong index,
                out InternationalizedText.InternationalizedTextHandle email);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_phone_line_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetPhoneLineSize(
                ContactInformationHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_email_line_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetPhoneLineAtIndex(
                ContactInformationHandle handle,
                ulong index,
                out InternationalizedText.InternationalizedTextHandle phone);

            [DllImport(DllName, EntryPoint = "eg_contact_information_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                ContactInformationHandle handle, out IntPtr value);

            [DllImport(DllName, EntryPoint = "eg_contact_information_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                ContactInformationHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region GeopoliticalUnit

        internal static class GeopoliticalUnit
        {
            internal struct GeopoliticalUnitType { };

            internal class GeopoliticalUnitHandle
                : ElectionGuardSafeHandle<GeopoliticalUnitType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = GeopoliticalUnit.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"GeopoliticalUnit Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                ReportingUnitType reportingUnitType,
                out GeopoliticalUnitHandle handle);

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_new_with_contact_info",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                ReportingUnitType reportingUnitType,
                ContactInformation.ContactInformationHandle contactInformation,
                out GeopoliticalUnitHandle handle);

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(GeopoliticalUnitType* handle);

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                GeopoliticalUnitHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                GeopoliticalUnitHandle handle, out IntPtr name);

            [DllImport(DllName, EntryPoint = "get_geopolitical_unit_get_type",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ReportingUnitType GetReportingUnitType(
                GeopoliticalUnitHandle handle);

            [DllImport(DllName, EntryPoint = "eg_geopolitical_unit_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                GeopoliticalUnitHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region BallotStyle

        internal static class BallotStyle
        {
            internal struct BallotStyleType { };

            internal class BallotStyleHandle
                : ElectionGuardSafeHandle<BallotStyleType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = BallotStyle.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"BallotStyle Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_ballot_style_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] gpUnitIds,
                ulong gpUnitIdsSize,
                out BallotStyleHandle handle);

            // TODO eg_ballot_style_new_with_parties

            [DllImport(DllName, EntryPoint = "eg_ballot_style_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(BallotStyleType* handle);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                BallotStyleHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_ballot_style_get_geopolitical_unit_ids_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetGeopoliticalUnitSize(
                BallotStyleHandle handle);
